remove content hover

--- a/index.html
+++ b/index.html
@@ -4,203 +4,187 @@ title: Home
 active: index
 ---
 <div id="headerwrap">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <br><h1>Motion Square Music</h1>
-                <h5>Stock music for Game, Film &amp; Multimedia</h5><br>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="{{"/assets/img/desktop.png" | prepend: site.url }}" class="img-responsive">
-            </div>
-        </div><!-- /row -->
-    </div><!-- /container -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<br><h1>Motion Square Music</h1>
+				<h5>Stock music for Game, Film &amp; Multimedia</h5><br>
+			</div>
+			<div class="col-lg-8 col-lg-offset-2 himg">
+				<img src="{{"/assets/img/desktop.png" | prepend: site.url }}" class="img-responsive">
+			</div>
+		</div><!-- /row -->
+	</div><!-- /container -->
 </div>
 
 <div class="container mtb">  
-    <div class="row">
-        <div class="col-lg-6">
-            <h3 class="th-content text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3><br>
+	<div class="row">
+		<div class="col-lg-6">
+			<h3 class="th-content text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3><br>
 
-            <p class="text-justify">เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
+			<p class="text-justify">เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
 
-                เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
+				เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
 
-                เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
-                สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
-                ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
-                ที่เปิดให้คุณสามารถซื้อเพลงที่มีอยู่หรือสั่งทำใหม่และนำไปใช้ในโปรเจ็คของคุณได้ทันที
-                ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
-                เริ่มต้นที่ 350 บาท
-            </p><br>
-            <a href="about" class="btn btn-theme center-block">Get to know us</a><br>
-        </div>
-        <div class="col-lg-6">
-            <img class="img-responsive" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
-        </div>
-    </div><!--/row -->
+				เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
+				สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
+				ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
+				ที่เปิดให้คุณสามารถซื้อเพลงที่มีอยู่หรือสั่งทำใหม่และนำไปใช้ในโปรเจ็คของคุณได้ทันที
+				ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
+				เริ่มต้นที่ 350 บาท
+			</p><br>
+			<a href="about" class="btn btn-theme center-block">Get to know us</a><br>
+		</div>
+		<div class="col-lg-6">
+			<img class="img-responsive" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
+		</div>
+	</div><!--/row -->
 </div>
 
 
 <div id="portfoliowrap">
-    <h3>OUR MUSIC COLLECTION</h3>
-    <p>คลิกเพื่อฟังเพลงในคลังของเรา</p>
-    <!-- PORTFOLIO SECTION -->
-<div class="container mb">
-    <div id="porfoliocollection" class="center-block text-center">
-        <div class="portfolioitem">
-            <a data-toggle="modal" href="#portfolio-modal-altrock">
-                <img src="{{"/assets/img/portfolio/img-portfolio-altrock-250px.jpg" | prepend: site.url }}"
-                     class="img-responsive contenthover-portfolio">
+	<h3>OUR MUSIC COLLECTION</h3>
+	<p>คลิกเพื่อฟังเพลงในคลังของเรา</p>
+	<!-- PORTFOLIO SECTION -->
+	<div class="container mb">
+		<div id="porfoliocollection" class="center-block text-center">
+			<div class="portfolioitem">
+				<a data-toggle="modal" href="#portfolio-modal-altrock">
+					<img src="{{"/assets/img/portfolio/img-portfolio-altrock-250px.jpg" | prepend: site.url }}"
+						 class="img-responsive">
+				</a>
+			</div>
+			<div class="portfolioitem">
+				<a data-toggle="modal" href="#portfolio-modal-cinematic">
+					<img src="{{"/assets/img/portfolio/img-portfolio-cinematic-250px.jpg" | prepend: site.url }}"
+						 class="img-responsive">
+				</a>
+			</div>
+			<div class="portfolioitem">
+				<a data-toggle="modal" href="#portfolio-modal-infographics">
+					<img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
+						 class="img-responsive">
+				</a>
+			</div>
+			<div class="portfolioitem">
+				<a data-toggle="modal" href="#portfolio-modal-infographics">
+					<img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
+						 class="img-responsive">
+				</a>
+			</div>
+		</div>
+	</div>
 
-                <div class="contenthover innerdivoverlay">
-                    <h3>Alternative Rock</h3>
-                </div>
-            </a>
-        </div>
-        <div class="portfolioitem">
-            <a data-toggle="modal" href="#portfolio-modal-cinematic">
-                <img src="{{"/assets/img/portfolio/img-portfolio-cinematic-250px.jpg" | prepend: site.url }}"
-                     class="img-responsive contenthover-portfolio">
+		<!--MODAL-->
+		<div class="modal fade in" id="portfolio-modal-altrock" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						<h4 class="modal-title">Alternative Rock</h4>
+					</div>
+					<div class="modal-body">
+						<p>ALTERNATIVE ROCK</p><p>
+						ด้วยความต้องการของทีวีโชว์/รายการวัยรุ่นที่มากขึ้นเรื่อยๆ ทำให้ดนตรีในประเภท Rock ได้ถูกนำไปใช้มากขึ้นเรื่อยๆจนเริ่มเกิดความจำเจ ในอัลบั้ม Alternative Rock จึงรวบรวมดนตรีร็อคในแบบที่เป็น “ทางเลือก” ที่ผลิตโดยศิลปินอิสระสำหรับทุกคนที่ต้องการเพลงร็อคแนวๆ ไม่ซ้ำจำเจ แต่ยังมีความ fresh และ power อยู่ สามารถใช้งานได้หลากหลาย ไม่ว่าจะเป็นงาน TV, หนังสั้น หรือแม้แต่ภาพยนต์</p>
+						<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/27545141&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe><p></p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div>
 
-                <div class="contenthover innerdivoverlay">
-                    <h3>Cinematic</h3>
-                </div>
-            </a>
-        </div>
-        <div class="portfolioitem">
-            <a data-toggle="modal" href="#portfolio-modal-infographics">
-                <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
-                     class="img-responsive contenthover-portfolio">
+		<div class="modal fade in" id="portfolio-modal-cinematic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						<h4 class="modal-title">Cinematic</h4>
+					</div>
+					<div class="modal-body">
+						<p>CINEMATIC</p><p>
+						เพลงในอัลบั้ม Cinematic จะ โฟกัสดนตรีประเภท Orchestra ในลักษณะของหนังฮอลลีวู้ดให้ความรู้สึกที่ยิ่งใหญ่และเร้าอารมณ์ ในบางเพลงจะมีส่วนผสมของดนตรีอิเล็กทรอนิคลงไปเพื่อเพิ่มความ Modern ทำให้สามารถนำไปใช้งานได้กว้างขึ้นไปอีก เพลงในอัลบั้ม Cinematic เหมาะเป็นอย่างยิ่งสำหรับภาพยนต์และเทรลเล่อต่างๆไม่ว่าจะเป็นฉากรัก ฉากบู๊ ฉากเดินทาง ฯลฯ </p>
+						<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/26177399&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div>
 
-                <div class="contenthover innerdivoverlay">
-                    <h3>Infographics</h3>
-                </div>
-            </a>
-        </div>
-        <div class="portfolioitem">
-            <a data-toggle="modal" href="#portfolio-modal-infographics">
-                <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
-                     class="img-responsive contenthover-portfolio">
-
-                <div class="contenthover innerdivoverlay">
-                    <h3>Infographics</h3>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-
-        <!--MODAL-->
-        <div class="modal fade in" id="portfolio-modal-altrock" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title">Alternative Rock</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>ALTERNATIVE ROCK</p><p>
-                        ด้วยความต้องการของทีวีโชว์/รายการวัยรุ่นที่มากขึ้นเรื่อยๆ ทำให้ดนตรีในประเภท Rock ได้ถูกนำไปใช้มากขึ้นเรื่อยๆจนเริ่มเกิดความจำเจ ในอัลบั้ม Alternative Rock จึงรวบรวมดนตรีร็อคในแบบที่เป็น “ทางเลือก” ที่ผลิตโดยศิลปินอิสระสำหรับทุกคนที่ต้องการเพลงร็อคแนวๆ ไม่ซ้ำจำเจ แต่ยังมีความ fresh และ power อยู่ สามารถใช้งานได้หลากหลาย ไม่ว่าจะเป็นงาน TV, หนังสั้น หรือแม้แต่ภาพยนต์</p>
-                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/27545141&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe><p></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div>
-
-        <div class="modal fade in" id="portfolio-modal-cinematic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title">Cinematic</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>CINEMATIC</p><p>
-                        เพลงในอัลบั้ม Cinematic จะ โฟกัสดนตรีประเภท Orchestra ในลักษณะของหนังฮอลลีวู้ดให้ความรู้สึกที่ยิ่งใหญ่และเร้าอารมณ์ ในบางเพลงจะมีส่วนผสมของดนตรีอิเล็กทรอนิคลงไปเพื่อเพิ่มความ Modern ทำให้สามารถนำไปใช้งานได้กว้างขึ้นไปอีก เพลงในอัลบั้ม Cinematic เหมาะเป็นอย่างยิ่งสำหรับภาพยนต์และเทรลเล่อต่างๆไม่ว่าจะเป็นฉากรัก ฉากบู๊ ฉากเดินทาง ฯลฯ </p>
-                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/26177399&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div>
-
-        <div class="modal fade" id="portfolio-modal-infographics" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title">Infographic</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>INFOGRAPHICS</p><p>
-                        ปฏิเสธไม่ได้จริงๆว่าในยุคปัจจุบันการนำเสนอในรูปแบบ infographic ได้รับความนิยมเป็นอย่างมาก ด้วยการสื่อสารที่เข้าใจง่ายและเพลิดเพลิน ดนตรีจึงเป็นอีกส่วนที่สำคัญมากๆใน infographic
-                        เพลงในอัลบั้ม Infographics เป็นทางเลือกที่ดีของทุกคนที่กำลังมองหาดนตรีที่มีความง่าย ลงตัว และสามารถ loop (ย้อน) ไปเรื่อยๆเพื่อเพิ่ม/ลดความยาวได้ตามต้องการ เพื่อไปประกอบในวิดีโอ infographic หรือ presentation สำหรับ TV และ Social media ต่างๆ </p>
-                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/43906178&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div>
+		<div class="modal fade" id="portfolio-modal-infographics" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						<h4 class="modal-title">Infographic</h4>
+					</div>
+					<div class="modal-body">
+						<p>INFOGRAPHICS</p><p>
+						ปฏิเสธไม่ได้จริงๆว่าในยุคปัจจุบันการนำเสนอในรูปแบบ infographic ได้รับความนิยมเป็นอย่างมาก ด้วยการสื่อสารที่เข้าใจง่ายและเพลิดเพลิน ดนตรีจึงเป็นอีกส่วนที่สำคัญมากๆใน infographic
+						เพลงในอัลบั้ม Infographics เป็นทางเลือกที่ดีของทุกคนที่กำลังมองหาดนตรีที่มีความง่าย ลงตัว และสามารถ loop (ย้อน) ไปเรื่อยๆเพื่อเพิ่ม/ลดความยาวได้ตามต้องการ เพื่อไปประกอบในวิดีโอ infographic หรือ presentation สำหรับ TV และ Social media ต่างๆ </p>
+						<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/43906178&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div>
 
 </div>
 
 <!-- SERVICES -->
 <div id="service">
-    <div class="container">
-        <h3 class="centered">SERVICES WE OFFERED</h3><br/>
+	<div class="container">
+		<h3 class="centered">SERVICES WE OFFERED</h3><br/>
 
-        <div class="row centered">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-laptop"></i>
-                <h4>Stock Music</h4>
+		<div class="row centered">
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<i class="fa fa-laptop"></i>
+				<h4>Stock Music</h4>
 
-                <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง (Song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-refresh"></i>
-                <h4>Loop Music</h4>
+				<p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง (Song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<i class="fa fa-refresh"></i>
+				<h4>Loop Music</h4>
 
-                <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-music"></i>
-                <h4>Original Score</h4>
+				<p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<i class="fa fa-music"></i>
+				<h4>Original Score</h4>
 
-                <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-youtube-play"></i>
-                <h4>Mock Up Score</h4>
+				<p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<i class="fa fa-youtube-play"></i>
+				<h4>Mock Up Score</h4>
 
-                <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
-            </div>
-        </div>
-        <div class="row centered">
-            <br><a href="services" class="btn btn-theme">More Service Information</a>
-        </div>
-    </div><!--/sub container -->
+				<p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
+			</div>
+		</div>
+		<div class="row centered">
+			<br><a href="services" class="btn btn-theme">More Service Information</a>
+		</div>
+	</div><!--/sub container -->
 </div>
 
 <!--  TESTIMONIALS -->
 <div id="twrap">
-    <div class="container centered">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <i class="fa fa-comment-o"></i>
+	<div class="container centered">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<i class="fa fa-comment-o"></i>
 
-                <p>“A film composer needs to understand that this is not music for its own sake, but it is music for a collaborative art. For me, a great film composer is always someone who not only has musical talent, but also a talent for telling a story with music. This is what makes film scoring a unique musical expression. It’s all about how the composer can assist the telling of the story as well as write great music.”</p>
-                <h4><br/>Alan Silvestri</h4>
+				<p>“A film composer needs to understand that this is not music for its own sake, but it is music for a collaborative art. For me, a great film composer is always someone who not only has musical talent, but also a talent for telling a story with music. This is what makes film scoring a unique musical expression. It’s all about how the composer can assist the telling of the story as well as write great music.”</p>
+				<h4><br/>Alan Silvestri</h4>
 
-                <p>Music Composer</p>
-            </div>
-        </div><!--/row -->
-    </div><!--/container -->
+				<p>Music Composer</p>
+			</div>
+		</div><!--/row -->
+	</div><!--/container -->
 </div>
