--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ active: index
 				<i class="fa fa-comment-o"></i>
 
 				<p>“A film composer needs to understand that this is not music for its own sake, but it is music for a collaborative art. For me, a great film composer is always someone who not only has musical talent, but also a talent for telling a story with music. This is what makes film scoring a unique musical expression. It’s all about how the composer can assist the telling of the story as well as write great music.”</p>
-				<h4><br/>Alan Silvestri</h4>
+				<br/>Alan Silvestri
 
 				<p>Music Composer</p>
 			</div>
