--- a/services/index.html
+++ b/services/index.html
@@ -55,16 +55,15 @@ active: services
             <h4>STOCK MUSIC</h4>
             <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song)ที่อยู่ใน Library ของเรา เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ ราคาสามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
 
-            <p>ราคามีการเปลี่ยนแปลงตามขนาดของโปรดักชั่น และวิธีการเผยแพร่ทางสื่อ</p>
+            <p>ราคามีการเปลี่ยนแปลงตามวิธีการเผยแพร่ทางสื่อ</p>
             <br>
 
           <!--   <img class="img-responsive center-block" src="{{"/assets/img/showcase/show1.jpg" | prepend: site.url }}">  -->  
             <h4>ORIGINAL SCORE</h4>
             <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา (ที่ไม่ใช่เป็นดนตรี Loop)</p>
 
-            <p>ราคาขั้นต่ำต่อหนึ่งโปรเจ็กต์ นาทีแรกสองพันบาท นาทีต่อไปนาทีละหนึ่งพันบาท*
-                ราคาอาจเปลี่ยนแปลงตามความเหมาะสม สามารถสอบถามได้ที่ stockmusicth@gmail.com<br/>
-                <b>* ราคาดังกล่าวไม่รวมค่าใช้จ่ายหากมีการอัดเสียงเครื่องดนตรีจริง</b></p>
+            <p>ราคาเปลี่ยนแปลงตามปัจจัยความยากง่าย ความยาว และวิธีการเผยแพร่ สามารถสอบถามได้ที่ stockmusicth@gmail.com<br/>
+        
             <br>
             <h4>MOCK UP SCORE</h4>
             <p>เปลี่ยนจาก MIDI ให้กลายเป็นเสียงเสมือนจริงด้วยซอฟต์แวร์มูลค่าหลายแสนบาท</p>
