--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,7 @@ active: services
 
 <!-- CONTENT -->
 <div class="container mtb">
-      <img id="img-pageheader" class="img-responsive center-block" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}">
+      <img id="img-pageheader" class="img-responsive center-block inherit-width" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}">
     <div class="row">
         <div class="col-lg-12">
             <h3 class="ctitle">SERVICE &amp; PRICING</h3>
