update about profile

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@ active: about
         <h3 class="mb">MEET OUR TEAM</h3>
         <div class="composerItem col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="he-wrap tpl6">
-                <img class="img-rounded" width="300px" src="{{"/assets/img/team/phil_aboutpg.jpg" | prepend: site.url}}" alt="">
+                <img class="img-rounded" width="300px" src="{{"/assets/img/team/phil_aboutpg2.jpg" | prepend: site.url}}" alt="">
 
                 <div class="he-view">
                     <div class="bg a0" data-animate="fadeIn">
@@ -57,10 +57,9 @@ active: about
                 เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop
                 กับนักแต่งเพลงมีชื่อเสียงด้านดนตรีประกอบภาพยนต์ที่ Hamburg, Germany ในงาน FilmSoundHamburg
                 รางวัลที่เคยได้รับเช่น Asia Music Festival (2010), Remix C-Quint เจ้าชู้รู้ตัวป่ะ(Pretty Killer) (2013)
-                ของแกรมมี่, และล่าสุดงาน Remix อีกชิ้นได้ไปจำหน่ายกับค่ายเพลงของอังกฤษ
+                ของแกรมมี่, และงาน Remix อีกชิ้นได้ไปจำหน่ายกับค่ายเพลงของอังกฤษ
                 ชัพวิชญ์ได้ผ่านงานมามากมายเช่นภาพยนต์ หนังสั้น หนังอิสระ เกมส์ โฆษณา ให้กับบริษัทอาทิ Samsung, GTH,
-                ททท., Play Channel ได้ผลิตเพลงในหนังที่ได้ฉายเทศการหนังเช่น The 56th BFI Lonfon Film Festival, The 30th
-                Torino International Film Festival. นอกจากนี้ยังมีผลงานส่วนตัวในชื่อศิลปิน “phil_wc” เพื่อผลิตดนตรี
+                ททท., Play Channel ได้ผลิตเพลงในหนังที่ได้ฉายเทศการหนังเช่น The 56th BFI London Film Festival, The 65th Berlin Film Festival. นอกจากนี้ยังมีผลงานส่วนตัวในชื่อศิลปิน “phil_wc” เพื่อผลิตดนตรี
                 Electronic, Experimental, Ambient.
                 <br><br>
                 ปัจจุบันเป็นนักแต่งเพลงอิสระและกำลังศึกษาต่อที่ UCLA สหรัฐอเมริกา ด้านดนตรีประกอบภาพยนต์</p>
