--- a/showcase/index.html
+++ b/showcase/index.html
@@ -35,6 +35,9 @@ active: showcase
 						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show7.jpg" | prepend: site.url }}" alt="">
 					</div>
                     <div class="item">
+						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show9.jpg" | prepend: site.url }}" alt="">
+					</div>
+                    <div class="item">
 						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show3.jpg" | prepend: site.url }}" alt="">
 					</div>
                     <div class="item">
