hide oldone text

--- a/services/index.html
+++ b/services/index.html
@@ -43,14 +43,14 @@ active: services
              หลังการตกลงซื้อขายท่านต้องกรอกเอกสารตามลิงค์ด้านล่างแล้วกรุณาส่งเอกสารมาที่อีเมล์ stockmusicth@gmail.com<br/>
              <a href="http://goo.gl/znVeId">Download เอกสาร</a><br/>
           </p>
-          <p><b>2. ซื้อขาด (Perpetual License) - ใช้ได้ตลอดไปทุกโปรเจกต์</b><br/> โปรดติดติดต่อมาได้ที่อีเมล stockmusicth@gmail.com เพื่อตกลงค่าใช้จ่าย เนื่องจากราคาจะแตกต่างกับลิขสิทธิ์แบบเช้า (single Use License)
+          <p><b>2. ซื้อขาด (Perpetual License) - ใช้ได้ตลอดไปทุกโปรเจกต์</b><br/> โปรดติดติดต่อมาได้ที่อีเมล stockmusicth@gmail.com เพื่อตกลงค่าใช้จ่าย เนื่องจากราคาจะแตกต่างกับลิขสิทธิ์แบบเช่า (single Use License)
           </p>
 
           <p>ท่านสามารถให้เราแต่งเพลงใหม่ในราคาถูกกว่าเดิม โดยลิขสิทธ์เพลงยังเป็นของเรา (Motion Square
             Music) และเราสามารถเอาไปใช้ต่อได้ โดยคิดราคาก็เป็นราคาเดิมตามเวลาและเพิ่ม 300 บาทเป็น ค่าใช้จ่ายในการแต่งเพลงใหม่
             (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br/><br/>เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น
             400+300 = 700 บาท</p>
-          <h4>oldone!</h4>
+<!--         <h4>oldone!</h4>
 
         <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br/></span>
             1. เช่า (Single Use License) - ใช้ได้ต่อหนึ่งโปรเจกต์<br/>
@@ -61,7 +61,7 @@ active: services
             ใช้ได้ตลอดไปทุกโปรเจกต์ ราคาเราจะคิดอีกแบบนึงครับ ติดต่อมาได้ที่อีเมล stockmusicth@gmail.com</p>
 
         <h4>end</h4>
-
+-->
         <p>ท่านสามารถให้เราแต่งใหม่ในราคาถูกได้ โดยที่ลิขสิทธ์เพลงยังเป็นของเรา (Motion Square
             Music) อยู่และเราสามารถนำไปใช้ต่อได้ โดยคิดราคาเดิมตามเวลาและค่าใช่จ่าย 300 บาทเป็นค่าแต่งเพลงใหม่
             (ราคาพิเศษจำนวนจำกัด ราคาจะมีการเปลี่ยนแปลงภายหลัง)<br/><br/>เช่นถ้าแต่งลูปในเวลา 45 วินาที ราคาก็จะเป็น
