--- a/freestuffs/index.html
+++ b/freestuffs/index.html
@@ -62,16 +62,14 @@ active: freestuffs
       <div class="freestuff-item">
         <h4>Footprints on the White Ground (2014) (EP)</h4>
         <img src="{{"/assets/img/freestuffs/footprints-ep.png" | prepend:site.url}}" alt="Footprints on the White Ground (2014) (EP)">
-        <a href="http://phil-wc.bandcamp.com/album/footprints-on-the-white-ground">
-          <img src="{{"/assets/img/freestuffs/freedownload.png" | prepend:site.url}}" alt="Download">
+        <a href="http://phil-wc.bandcamp.com/album/footprints-on-the-white-ground" class="btn btn-theme">Free Download
         </a>
       </div>
     
       <div class="freestuff-item">
         <h4>Science Series II: Space Explorer (2013)</h4>
         <img src="{{"/assets/img/freestuffs/science-series-ii.png" | prepend:site.url}}" alt="Science Series II: Space Explorer (2013)">
-        <a href="http://phil-wc.bandcamp.com/album/science-series-ii-space-explorer">
-          <img src="{{"/assets/img/freestuffs/freedownload.png" | prepend:site.url}}" alt="Download">
+        <a href="http://phil-wc.bandcamp.com/album/science-series-ii-space-explorer" class="btn btn-theme">Free Download
         </a>
       </div>
     </div>
@@ -80,15 +78,13 @@ active: freestuffs
       <div class="freestuff-item">      
         <h4>Science Series I: Quasar (2010)</h4>
         <img src="{{"/assets/img/freestuffs/science-series-i.png" | prepend:site.url}}" alt="Science Series I: Quasar (2010)">
-        <a href="https://phil-wc.bandcamp.com/album/science-series-i-quasar">
-          <img src="{{"/assets/img/freestuffs/freedownload.png" | prepend:site.url}}" alt="Download">
+        <a href="https://phil-wc.bandcamp.com/album/science-series-i-quasar" class="btn btn-theme">Free Download
         </a>
       </div>  
       <div class="freestuff-item">
         <h4>Ante Meridiem (2009)</h4>
         <img src="{{"/assets/img/freestuffs/ante-meridiem.png" | prepend:site.url}}" alt="Ante Meridiem (2009)">
-        <a href="https://phil-wc.bandcamp.com/album/ante-meridiem">
-          <img src="{{"/assets/img/freestuffs/freedownload.png" | prepend:site.url}}" alt="Download">
+        <a href="https://phil-wc.bandcamp.com/album/ante-meridiem" class="btn btn-theme">Free Download
         </a>
       </div>
     </div>
