--- a/services/index.html
+++ b/services/index.html
@@ -36,7 +36,7 @@ active: services
         1:30-2:00 นาที 550 Baht<br/>
         มากกว่า 2 นาที เริ่มต้นที่600 Baht<b>***</b></p>
           
-          <h4>newone!</h4>
+          <!--newone!-->
           <p><span style="text-decoration: underline;">ลิขสิทธิ์เพลงมีสองรูปแบบ<br/></span></p>
           <p><b>1.เช่า (Single Use License) - ใช้ได้ต่อหนึ่งโปรเจกต์</b><br/>
              <b>* ราคาตามที่กำหนดด้านบน</b><br/>
