--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@ active: index
         ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
         ที่เปิดให้คุณสามารถซื้อเพลงที่มีอยู่หรือสั่งทำใหม่และนำไปใช้ในโปรเจ็คของคุณได้ทันที
         ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
-        เริ่มต้นที่ 350 บาท
+        เริ่มต้นที่ 350 บาท 
+        <p>
+            รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
+       </p>
       </p><br>
       <a href="about" class="btn btn-theme center-block">Get to know us</a><br>
     </div>
