--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@ active: about
             </p><p>
                 Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน
                 จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ                 คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p><p>
-    รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
+    รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
             </p>
         </div>
     </div><!--/row -->
