--- a/about/index.html
+++ b/about/index.html
@@ -15,24 +15,17 @@ active: about
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{"/assets/img/agency.jpg" | prepend:site.url}}" alt="">
+            <img class="img-responsive" src="{{"/assets/img/MSMcredits.jpg" | prepend:site.url}}" alt="">
         </div>
 
         <div class="col-lg-6">
             <h4>About MotionSquareMusic</h4>
 
-            <p>Motion Square Music คือที่ที่เราขาย music library เช่น loops, songs ในราคาถูก
-                และสามารถผลิตเพลงประกอบได้ในหลากหลายรูปแบบจากเราผู้ชำนาญงาน MIDI Instruments บวกกับ software instruments
-                คุณภาพสูงมูลค่ารวมหลายแสนบาท และเราได้ศึกษาเฉพาะทางมาเพื่อผลิตดนตรีประกอบภาพยนต์โดยตรง</p>
-            <p>เรานำเสนอหนทางที่ &ldquo;ง่ายที่สุด&rdquo; และ &ldquo;เร็วที่สุด&rdquo;
-                สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
-                ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที
-                ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด
-            </p><p>
-                Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน
-                จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ                 คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p><p>
-    รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
-            </p>
+            <p>Motion Square Music เราคือ Music Library ที่จำหน่ายลิขสิทธิ์เพลงประกอบภาพยนต์, Loop เกมส์, และดนตรีสำหรับสื่อบันเทิงต่างๆ แบบ Online เป็นแห่งแรกในประเทศไทย ผลงานของเรารับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin International Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น</p>
+
+            <p>เรานำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด” สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer ที่มีประสบการณ์ ที่เปิดให้คุณสามารถซื้อหรือสั่งทำและนำไปใช้ในโปรเจ็คของคุณได้ทันที ด้วยราคาที่ยุติธรรมทำให้คุณเองก็สามารถมีเพลงดีๆที่ช่วยยกระดับโปรเจ็คของคุณ แม้จะมีงบการเงินที่จำกัด</p>
+<p>
+    Motion Square Music ก่อตั้งโดยฟิว และ บิว ที่เริ่มต้นรู้จักและทำงานด้วยกันเมื่อปี 2012 ในงานดนตรีประกอบซีรี่ยส์เรื่องหนึ่ง และจากนั้นเราก็แลกเปลี่ยนความคิดกัน จนมาคิดว่าเราควรจะทำ Music Library สำหรับลูกค้าที่ต้องการงานเร่งรีบบ้าง งานถูกบ้าง เพื่อประกอบในงานภาพยนต์โดยไม่ต้องห่วงเรื่องลิขสิทธิ์ แทนที่จะไปเอาเพลงของ คนอื่นมาอย่างผิดกฏหมาย เราทำงานกันออนไลน์ทั่วโลกผ่านอินเทอร์เน็ต และขณะนี้ทั้งฟิวและบิวก็กำลังศึกษาต่อที่สหรัฐอเมริกาด้านดนตรีโดยตรง</p>
         </div>
     </div><!--/row -->
 </div>
@@ -56,7 +49,7 @@ active: about
             <p class="text-justify"> สำเร็จการศึกษาปริญญาตรีด้านการประพันธ์เพลงจากมหาวิทยาลัยรังสิต
                 เคยได้รับทุนการศึกษาจากเยอรมันเพื่อไปเข้าร่วม workshop
                 กับนักแต่งเพลงมีชื่อเสียงด้านดนตรีประกอบภาพยนต์ที่ Hamburg, Germany ในงาน FilmSoundHamburg
-                รางวัลที่เคยได้รับเช่น Asia Music Festival (2010), Remix C-Quint เจ้าชู้รู้ตัวป่ะ(Pretty Killer) (2013)
+                รางวัลที่เคยได้รับเช่น Asia Music Festival (2010), Remix C-Quint (Pretty Killer) (2013)
                 ของแกรมมี่, และงาน Remix อีกชิ้นได้ไปจำหน่ายกับค่ายเพลงของอังกฤษ
                 ชัพวิชญ์ได้ผ่านงานมามากมายเช่นภาพยนต์ หนังสั้น หนังอิสระ เกมส์ โฆษณา ให้กับบริษัทอาทิ Samsung, GTH,
                 ททท., Play Channel ได้ผลิตเพลงในหนังที่ได้ฉายเทศการหนังเช่น The 56th BFI London Film Festival, The 65th Berlin Film Festival. นอกจากนี้ยังมีผลงานส่วนตัวในชื่อศิลปิน “phil_wc” เพื่อผลิตดนตรี
