--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ active: index
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <br><h1>Motion Square Music</h1>
-        <h5>Stock music for Game, Film &amp; Multimedia</h5><br>
+        <h5>The first ever music library for film, tv, and media in Thailand</h5><br>
       </div>
       <div class="col-lg-8 col-lg-offset-2 himg">
         <img src="{{"/assets/img/desktop.png" | prepend: site.url }}" class="img-responsive">
@@ -22,10 +22,7 @@ active: index
     <div class="col-lg-6">
       <h3 class="th-content text-center">ให้ดนตรีช่วยเล่าเรื่องราวของคุณ</h3><br>
 
-      <p class="text-justify">เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? <br><br>
-
-        เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที? <br><br>
-
+      <p class="text-justify">เคยมั้ยที่ต้องขโมยเพลงบนอินเตอร์เน็ตมาใช้ในภาพยนต์ของคุณเพราะว่าไม่มีงบจะจ้างนักแต่งเพลง? เคยมั้ยที่ไม่สามารถหาเพลงที่ถูกใจมาใช้ในงานของคุณได้ซะที?<br><br>
         เรา Motion Square Music นำเสนอหนทางที่ “ง่ายที่สุด” และ “เร็วที่สุด”
         สำหรับคนทำภาพยนต์ทุกๆแนวไม่ว่าจะสั้นหรือยาว เกมส์ โฆษณาและสื่ออื่นๆ ด้วยเพลงจาก composer
         ที่มีประสบการณ์มามากมายและศึกษาด้านดนตรีประกอบภาพยนต์มาโดยตรง
@@ -33,7 +30,7 @@ active: index
         ด้วยราคาที่เป็นมิตรทำให้คุณเองก็สามารถได้ใช้งานดีๆที่ช่วยยกระดับโปรเจ็ค ของคุณ แม้จะมีงบการเงินที่จำกัด
         เริ่มต้นที่ 350 บาท 
         <p>
-            รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Vancouver Film Festival เป็นต้น
+            รับรองคุณภาพระดับสูงด้วยผลงานกับค่ายหนังและบริษัทโปรดักชั่นชั้นนำของประเทศไทย เช่น GTH, Kantana Group, วายุฟิล์มโปรดักชั่น, ฯลฯ อีกทั้งยังมีผลงานที่ได้โลดแล่นอยู่บนเทศกาลภาพยนต์นานาชาติมากมาย เช่น Berlin Film Festival, Busan International Film Festival, และ Los Angeles Asia Pacific Film Festival เป็นต้น
        </p>
       </p><br>
       <a href="about" class="btn btn-theme center-block">Get to know us</a><br>
@@ -74,8 +71,8 @@ active: index
       </article>
 
       <article class="musiccollection">
-        <a data-toggle="modal" href="#portfolio-modal-infographics">
-          <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}" class="img-responsive">
+        <a data-toggle="modal" href="#portfolio-modal-game">
+          <img src="{{"/assets/img/portfolio/img-portfolio-game-250px.jpg" | prepend: site.url }}" class="img-responsive">
         </a>
         <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-infographics"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
       </article>
@@ -134,6 +131,25 @@ active: index
             ปฏิเสธไม่ได้จริงๆว่าในยุคปัจจุบันการนำเสนอในรูปแบบ infographic ได้รับความนิยมเป็นอย่างมาก ด้วยการสื่อสารที่เข้าใจง่ายและเพลิดเพลิน ดนตรีจึงเป็นอีกส่วนที่สำคัญมากๆใน infographic
             เพลงในอัลบั้ม Infographics เป็นทางเลือกที่ดีของทุกคนที่กำลังมองหาดนตรีที่มีความง่าย ลงตัว และสามารถ loop (ย้อน) ไปเรื่อยๆเพื่อเพิ่ม/ลดความยาวได้ตามต้องการ เพื่อไปประกอบในวิดีโอ infographic หรือ presentation สำหรับ TV และ Social media ต่างๆ </p>
             <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/43906178&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div>
+       
+    <div class="modal fade" id="portfolio-modal-game" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 class="modal-title">Infographic</h4>
+          </div>
+          <div class="modal-body">
+            <p>Game Loops</p><p>
+            ในปัจจุบันเกมส์ในโทรศัพท์มือถือและ Flash game ได้รับความนิยมเป็นอย่างมาก ทำให้มีผู้ผลิตเกมส์หน้าใหม่ๆเข้ามาพัฒนาในด้านนี้มากขึ้นเรื่อยๆ ในอัลบั้มนี้เราจึงได้รวบรวมเพลงที่มีความสนุกของเกมส์สไตล์ mobile ที่สามารถลูปวนได้เรื่อยๆ เรามั่นใจว่าจะมีเพลงที่เหมาะกับเกมส์เกมส์ใหม่ของคุณแน่นอน </p>
+            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/62165436&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
