--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ active: index
         <a data-toggle="modal" href="#portfolio-modal-game">
           <img src="{{"/assets/img/portfolio/img-portfolio-game-250px.jpg" | prepend: site.url }}" class="img-responsive">
         </a>
-        <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-infographics"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
+        <a class="musiccollection-text" data-toggle="modal" href="#portfolio-modal-game"><i class="fa fa-caret-square-o-right"></i> DISCOVER</a>
       </article>
 
     </div>
